# vk_ads

./: README.md
hometask1/: main  main.cpp
seminars/seminar_1/hometask1/: main  main.cpp
seminars/seminar_1/hometask1/unit_tests/: CMakeLists.txt  test_func.h  unit_tests.cpp
seminars/seminar_1/seminar_work1/: main  main.cpp
seminars/seminar_1/unit_tests/: test_func.h
seminars/seminar_2/hometask2/: linkedlist1.cpp  linkedlist2.cpp  main  main.cpp
seminars/seminar_2/hometask2/class_headers/: linkedlist1.h  linkedlist2.h
seminars/seminar_2/hometask2/unit_tests/: CMakeLists.txt  test_func.h  unit_tests.cpp
seminars/seminar_2/seminar_work2/: linkedlist1.cpp  main  main.cpp
seminars/seminar_2/unit_tests/: test_func.h  unit_tests.cpp
seminars/seminar_3/hometask3/: main  main.cpp
seminars/seminar_3/hometask3/unit_tests/: CMakeLists.txt  unit_tests.cpp
seminars/seminar_3/seminar_work3/: main  main.cpp
seminars/seminar_3/unit_tests/: test_func.h  unit_tests.cpp
seminars/seminar_4/hometask4/: main  main.cpp
seminars/seminar_4/seminar_work4/: main  main.cpp
seminars/seminar_4/unit_tests/: CMakeLists.txt  test_func.h  unit_tests.cpp
